// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> snapshot should render the same 1`] = `
"Snapshot Diff:
 Compared values have no visual difference."
`;

exports[`<RadioGroup /> snapshot should render the same, with <RadioGroup.Button /> 1`] = `
"Snapshot Diff:
 Compared values have no visual difference."
`;

exports[`<RadioGroup /> snapshot simple with <RadioGroup.Button /> 1`] = `
.c2 {
  display: block;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 16px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #FFFFFF;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #1355d0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 *:nth-child(2) {
  margin-left: 5px;
}

.c2:hover {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c2:focus {
  box-shadow: 0 2px 4px 0 rgba(19,85,208,0.5);
  background-color: #FFFFFF;
  border-color: #1355d0;
  color: #1355d0;
}

.c2:active {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c4 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c5 .c3:checked ~ .c6 {
  border-color: #1355d0;
}

.c5 .c3:checked ~ .c6:after {
  background-color: #1355d0;
  display: block;
}

.c5 .c3:focus ~ .c6 {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c5 .c3:checked:disabled ~ .c6 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #FFFFFF;
}

.c1 .c7 {
  margin-left: 8px;
  font-size: 17px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
  role="radiogroup"
>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
    >
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        name="groceries"
        onChange={[Function]}
        type="radio"
        value="Foo"
      />
      Foo
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
    >
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        name="groceries"
        onChange={[Function]}
        type="radio"
        value="Bar"
      />
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
    >
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        name="groceries"
        onChange={[Function]}
        type="radio"
        value="Baz"
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> snapshot simple with <RadioGroup.Button /> inline 1`] = `
.c2 {
  display: block;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 16px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #FFFFFF;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #1355d0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 *:nth-child(2) {
  margin-left: 5px;
}

.c2:hover {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c2:focus {
  box-shadow: 0 2px 4px 0 rgba(19,85,208,0.5);
  background-color: #FFFFFF;
  border-color: #1355d0;
  color: #1355d0;
}

.c2:active {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c4 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c5 .c3:checked ~ .c6 {
  border-color: #1355d0;
}

.c5 .c3:checked ~ .c6:after {
  background-color: #1355d0;
  display: block;
}

.c5 .c3:focus ~ .c6 {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c5 .c3:checked:disabled ~ .c6 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #FFFFFF;
}

.c1 {
  display: inline-block;
  vertical-align: top;
  margin-right: 16px;
}

.c1:last-child {
  margin-right: 0;
}

.c1 .c7 {
  margin-left: 8px;
  font-size: 17px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
  role="radiogroup"
>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
    >
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        name="groceries"
        onChange={[Function]}
        type="radio"
        value="Foo"
      />
      Foo
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
    >
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        name="groceries"
        onChange={[Function]}
        type="radio"
        value="Bar"
      />
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
    >
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        name="groceries"
        onChange={[Function]}
        type="radio"
        value="Baz"
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> snapshot simple with <RadioGroup.Radio /> 1`] = `
.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c5 {
  background-color: #FFFFFF;
  border: 1.5px solid #999999;
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  height: 16px;
  margin-right: 5px;
  position: relative;
  top: 4px;
  width: 16px;
}

.c5:after {
  background-color: #1355d0;
  border-radius: 50%;
  content: '';
  display: none;
  height: 50%;
  left: 25%;
  position: absolute;
  top: 25%;
  width: 50%;
}

.c1 {
  display: block;
  margin-bottom: 5px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 .c2:checked ~ .c4 {
  border-color: #1355d0;
}

.c1 .c2:checked ~ .c4:after {
  background-color: #1355d0;
  display: block;
}

.c1 .c2:focus ~ .c4 {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c1:hover .c4,
.c1:focus .c4 {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c1 .c2:checked:disabled ~ .c4 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #FFFFFF;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
  role="radiogroup"
>
  <label
    className="c1"
    disabled={false}
  >
    <input
      className="c2 c3"
      disabled={false}
      name="groceries"
      onChange={[Function]}
      type="radio"
      value="Foo"
    />
    <span
      className="c4 c5"
    />
    Foo
  </label>
  <label
    className="c1"
    disabled={false}
  >
    <input
      className="c2 c3"
      disabled={false}
      name="groceries"
      onChange={[Function]}
      type="radio"
      value="Bar"
    />
    <span
      className="c4 c5"
    />
    Bar
  </label>
  <label
    className="c1"
    disabled={false}
  >
    <input
      className="c2 c3"
      disabled={false}
      name="groceries"
      onChange={[Function]}
      type="radio"
      value="Baz"
    />
    <span
      className="c4 c5"
    />
    Baz
  </label>
</div>
`;

exports[`<RadioGroup /> snapshot simple with button options 1`] = `
.c2 {
  display: block;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 16px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #FFFFFF;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #1355d0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 *:nth-child(2) {
  margin-left: 5px;
}

.c2:hover {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c2:focus {
  box-shadow: 0 2px 4px 0 rgba(19,85,208,0.5);
  background-color: #FFFFFF;
  border-color: #1355d0;
  color: #1355d0;
}

.c2:active {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c4 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c5 .c3:checked ~ .c6 {
  border-color: #1355d0;
}

.c5 .c3:checked ~ .c6:after {
  background-color: #1355d0;
  display: block;
}

.c5 .c3:focus ~ .c6 {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c5 .c3:checked:disabled ~ .c6 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #FFFFFF;
}

.c1 .c7 {
  margin-left: 8px;
  font-size: 17px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
  role="radiogroup"
>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
    >
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        name="foo"
        onChange={[Function]}
        type="radio"
        value="Foo"
      />
      Foo
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
    >
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        name="foo"
        onChange={[Function]}
        type="radio"
        value="Bar"
      />
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
    >
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        name="foo"
        onChange={[Function]}
        type="radio"
        value="Baz"
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> snapshot simple with options 1`] = `
.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c5 {
  background-color: #FFFFFF;
  border: 1.5px solid #999999;
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  height: 16px;
  margin-right: 5px;
  position: relative;
  top: 4px;
  width: 16px;
}

.c5:after {
  background-color: #1355d0;
  border-radius: 50%;
  content: '';
  display: none;
  height: 50%;
  left: 25%;
  position: absolute;
  top: 25%;
  width: 50%;
}

.c1 {
  display: block;
  margin-bottom: 5px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 .c2:checked ~ .c4 {
  border-color: #1355d0;
}

.c1 .c2:checked ~ .c4:after {
  background-color: #1355d0;
  display: block;
}

.c1 .c2:focus ~ .c4 {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c1:hover .c4,
.c1:focus .c4 {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c1 .c2:checked:disabled ~ .c4 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #FFFFFF;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
  role="radiogroup"
>
  <label
    className="c1"
    disabled={false}
  >
    <input
      className="c2 c3"
      disabled={false}
      name="foo"
      onChange={[Function]}
      type="radio"
      value="Foo"
    />
    <span
      className="c4 c5"
    />
    Foo
  </label>
  <label
    className="c1"
    disabled={false}
  >
    <input
      className="c2 c3"
      disabled={false}
      name="foo"
      onChange={[Function]}
      type="radio"
      value="Bar"
    />
    <span
      className="c4 c5"
    />
    Bar
  </label>
  <label
    className="c1"
    disabled={false}
  >
    <input
      className="c2 c3"
      disabled={false}
      name="foo"
      onChange={[Function]}
      type="radio"
      value="Baz"
    />
    <span
      className="c4 c5"
    />
    Baz
  </label>
</div>
`;
